--- a/.local/share/chezmoi/dot_config/waybar/config.jsonc
+++ b/.local/share/chezmoi/dot_config/waybar/config.jsonc
@@ -11,7 +11,7 @@
 
     "niri/workspaces": {
         "disable-scroll": true,
-        "all-outputs": true,
+        "all-outputs": false,
     },
 
     "custom/wlogout": {
