--- a/.local/share/chezmoi/dot_config/waybar/config.jsonc
+++ b/.local/share/chezmoi/dot_config/waybar/config.jsonc
@@ -52,7 +52,7 @@
 
     "clock": {
         "format": "{:L%A %I:%M %p}",
-        "format-alt": "󰃮 {:L%d %B %Y}",
+        "format-alt": "󰃮 {:L%d-%m-%Y}",
         "tooltip-format": "<tt><small>{calendar}</small></tt>",
         "calendar": {
             "mode"          : "month",
