Update .config/ghostty/config Update .config/niri/config.kdl Update .config/waybar/config.jsonc

--- a/.local/share/chezmoi/dot_config/ghostty/config
+++ b/.local/share/chezmoi/dot_config/ghostty/config
@@ -53,6 +53,6 @@ mouse-hide-while-typing = true
 background-opacity = 0.85
 font-family = JetBrainsMono Nerd Font
 font-size = 10
-
+confirm-close-surface = false
 # === Keybinds ===
 # keybind = ctrl+r=reload_config
