Update .config/niri/config.kdl Update .config/waybar/config.jsonc

--- a/.local/share/chezmoi/dot_config/waybar/config.jsonc
+++ b/.local/share/chezmoi/dot_config/waybar/config.jsonc
@@ -4,7 +4,7 @@
     "height": 30,
     "spacing": 1,
     "margin": 0,
-    "modules-left": ["custom/wlogout", "niri/workspaces", "custom/playerctl"],
+    "modules-left": ["custom/wlogout", "niri/workspaces"],
         "modules-center": [],                                                                           //battery   //disk     // uptime      //updates        // systray
     "modules-right": ["pulseaudio", "backlight", "network", "bluetooth", "memory", "temperature", "battery", "clock" , "tray"],
 
@@ -27,7 +27,14 @@
         "on-click": "playerctl play-pause",
         "on-click-right": "playerctl next",
     },
-    
+
+    "custom/weather": {
+        "exec": "curl 'https://wttr.in/?format=1'",
+        "interval": 3600,
+        "format": "{}",
+        "tooltip": true
+    },
+
     "custom/uptime": {
         "format": "󰔟 {}",
         "exec": "uptime -p | sed 's/up //; s/ days/d/; s/ hours/h/; s/ minutes/m/'",
